--- a/index.html
+++ b/index.html
@@ -7,6 +7,15 @@
     <link rel="stylesheet" href="css/index.css">
 </head>
 <body>
-    
+
+    <div id="app">
+        <main>
+            <div class="main-container">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Alias provident voluptas aspernatur eaque quia assumenda enim sapiente dolorem ab tenetur tempora in facere inventore sit totam, delectus, exercitationem quos excepturi.</div>
+        </main>
+        
+        <aside>
+            <div class="aside-container">aside</div>
+        </aside>
+    </div>
 </body>
 </html>
