--- a/index.html
+++ b/index.html
@@ -10,11 +10,26 @@
 
     <div id="app">
         <main>
-            <div class="main-container">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Alias provident voluptas aspernatur eaque quia assumenda enim sapiente dolorem ab tenetur tempora in facere inventore sit totam, delectus, exercitationem quos excepturi.</div>
+            <div class="main-container">
+                <div class="back">
+                    <img src="assets/icons/arrow-left-02.svg" alt="Ícone de seta">
+                    <span>Voltar</span>
+                </div>
+                
+                <h1>Formulário de matrícula</h1>
+                <p>Preencha os dados abaixo para matricular seu filho na escola de educação infantil Estrelas do Amanhã.</p>
+            </div>
         </main>
         
         <aside>
-            <div class="aside-container">aside</div>
+            <div class="aside-container">
+                <header>
+                    <img src="assets/logo.svg" alt="Logomarca da escola Estrelas do Amanhã">
+                    <h2>Porque cada momento de <span>aprendizado</span> conta</h2>
+                    <p>Inscreva seu filho em nossa escola e veja-o florescer em um ambiente acolhedor, seguro e estimulante.</p>
+                </header>
+                <img src="assets/Illustration.svg" alt="Ilustração de uma professora com crianças prestando atenção">
+            </div>
         </aside>
     </div>
 </body>
