--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Estrelas do Amanhã</title>
     <link rel="stylesheet" href="css/index.css">
 </head>
+
 <body>
 
     <div id="app">
@@ -15,22 +17,74 @@
                     <img src="assets/icons/arrow-left-02.svg" alt="Ícone de seta">
                     <span>Voltar</span>
                 </div>
-                
+
                 <h1>Formulário de matrícula</h1>
-                <p>Preencha os dados abaixo para matricular seu filho na escola de educação infantil Estrelas do Amanhã.</p>
+                <p>Preencha os dados abaixo para matricular seu filho na escola de educação infantil Estrelas do Amanhã.
+                </p>
+
+                <form>
+                    <legend>Informações da criança</legend>
+
+                    <div class="input-wrapper">
+                        <label for="fullname">Nome completo</label>
+                        <input 
+                            type="text" 
+                            name="fullname" 
+                            placeholder="Coloque o nome da criança aqui">
+                    </div>
+
+                    <div class="input-wrapper">
+                        <label for="birth">Data de nascimento</label>
+                        <input 
+                            type="date" 
+                            name="birth" 
+                            id="birth">
+                    </div>
+
+                    <div class="select-wrapper">
+                        <label for="gender">Sexo</label>
+                        <select name="gender" id="gender">
+                            <option value="famale">Feminino</option>
+                            <option value="male">Homem</option>
+                            <option value="na">Prefiro não responder</option>
+                        </select>
+                    </div>
+
+                    <div class="textarea-wrapper">
+                        <label for="medical-info">Informações médicas</label>
+                        <textarea 
+                            name="medical-info" 
+                            id="medical-info" 
+                            cols="30"
+                            placeholder="A criança possui alguma condição médica que a escola deve estar ciente ? (Se sim, especifique)">
+                        </textarea>
+                    </div>
+
+                    <div class="droparea-wrapper">
+                        <input 
+                            type="file" 
+                            name="birth-file" 
+                            id="birth-file">
+                        <img src="assets/icons/cloud-upload.svg" alt="Ícone de upload">
+                        <p>Clique aqui para <br> selecionar a imagem</p>
+                    </div>
+                </form>
+
             </div>
         </main>
-        
+
         <aside>
             <div class="aside-container">
                 <header>
                     <img src="assets/logo.svg" alt="Logomarca da escola Estrelas do Amanhã">
                     <h2>Porque cada momento de <span>aprendizado</span> conta</h2>
-                    <p>Inscreva seu filho em nossa escola e veja-o florescer em um ambiente acolhedor, seguro e estimulante.</p>
+                    <p>Inscreva seu filho em nossa escola e veja-o florescer em um ambiente acolhedor, seguro e
+                        estimulante.</p>
                 </header>
                 <img src="assets/Illustration.svg" alt="Ilustração de uma professora com crianças prestando atenção">
             </div>
         </aside>
     </div>
 </body>
+
 </html>
