--- a/index.html
+++ b/index.html
@@ -23,51 +23,48 @@
                 </p>
 
                 <form>
-                    <legend>Informações da criança</legend>
-
-                    <div class="input-wrapper">
-                        <label for="fullname">Nome completo</label>
-                        <input 
-                            type="text" 
-                            name="fullname" 
-                            placeholder="Coloque o nome da criança aqui">
-                    </div>
-
-                    <div class="input-wrapper">
-                        <label for="birth">Data de nascimento</label>
-                        <input 
-                            type="date" 
-                            name="birth" 
-                            id="birth">
-                    </div>
-
-                    <div class="select-wrapper">
-                        <label for="gender">Sexo</label>
-                        <select name="gender" id="gender">
-                            <option value="famale">Feminino</option>
-                            <option value="male">Homem</option>
-                            <option value="na">Prefiro não responder</option>
-                        </select>
-                    </div>
-
-                    <div class="textarea-wrapper">
-                        <label for="medical-info">Informações médicas</label>
-                        <textarea 
-                            name="medical-info" 
-                            id="medical-info" 
-                            cols="30"
-                            placeholder="A criança possui alguma condição médica que a escola deve estar ciente ? (Se sim, especifique)">
-                        </textarea>
-                    </div>
-
-                    <div class="droparea-wrapper">
-                        <input 
-                            type="file" 
-                            name="birth-file" 
-                            id="birth-file">
-                        <img src="assets/icons/cloud-upload.svg" alt="Ícone de upload">
-                        <p>Clique aqui para <br> selecionar a imagem</p>
-                    </div>
+                    <fieldset>
+                        <legend>Informações da criança</legend>
+                        <div class="input-wrapper">
+                            <label for="fullname">Nome completo</label>
+                            <input
+                                type="text"
+                                name="fullname"
+                                placeholder="Coloque o nome da criança aqui">
+                        </div>
+                        <div class="input-wrapper">
+                            <label for="birth">Data de nascimento</label>
+                            <input
+                                type="date"
+                                name="birth"
+                                id="birth">
+                        </div>
+                        <div class="select-wrapper">
+                            <label for="gender">Sexo</label>
+                            <select name="gender" id="gender">
+                                <option value="famale">Feminino</option>
+                                <option value="male">Homem</option>
+                                <option value="na">Prefiro não responder</option>
+                            </select>
+                        </div>
+                        <div class="textarea-wrapper">
+                            <label for="medical-info">Informações médicas</label>
+                            <textarea
+                                name="medical-info"
+                                id="medical-info"
+                                cols="30"
+                                placeholder="A criança possui alguma condição médica que a escola deve estar ciente ? (Se sim, especifique)">
+                            </textarea>
+                        </div>
+                        <div class="droparea-wrapper">
+                            <input
+                                type="file"
+                                name="birth-file"
+                                id="birth-file">
+                            <img src="assets/icons/cloud-upload.svg" alt="Ícone de upload">
+                            <p>Clique aqui para <br> selecionar a imagem</p>
+                        </div>
+                    </fieldset>
                 </form>
 
             </div>
