feat: finalizar os inputs do tipo radio

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                         </div>
                     </fieldset>
 
-                   <fieldset class="gardin">
+                    <fieldset class="gardin">
                         <legend>Informações do responsável</legend>
 
                         <div class="input-wrapper">
@@ -130,9 +130,9 @@
                                 <span>Insira um e-mail válido</span>
                             </div>
                         </div>
-                   </fieldset>
+                    </fieldset>
 
-                   <fieldset class="enroll-options">
+                    <fieldset class="enroll-options">
                         <legend>Opções de matrícula</legend>
 
                         <div class="input-wrapper">
@@ -153,8 +153,62 @@
                                     <label for="evening">Tarde</label>
                                 </div>
                             </div>
+
+                            <div class="input-wrapper">
+                                <label>Em qual esporte você gostaria de inscrever seu filho?</label>
+
+                                <div class="radio-wrapper">
+
+                                    <div class="radio-inner">
+                                        <div class="radio-img"></div>
+                                        <input type="radio" name="sport-shift" id="football" value="football">
+                                        <img src="assets/icons/football.svg" alt="">
+                                        <label for="football">Futebol</label>
+                                    </div>
+
+                                    <div class="radio-inner">
+                                        <div class="radio-img"></div>
+                                        <input type="radio" name="sport-shift" id="basketball" value="basketball">
+                                        <img src="assets/icons/basketball-02.svg" alt="">
+                                        <label for="basketball">Basquete</label>
+                                    </div>
+
+                                    <div class="radio-inner">
+                                        <div class="radio-img"></div>
+                                        <input type="radio" name="sport-shift" id="swimming" value="swimming">
+                                        <img src="assets/icons/swimming.svg" alt="">
+                                        <label for="swimming">Natação</label>
+                                    </div>
+
+                                    <div class="radio-inner">
+                                        <div class="radio-img"></div>
+                                        <input type="radio" name="sport-shift" id="yoga" value="yoga">
+                                        <img src="assets/icons/yoga-02.svg" alt="">
+                                        <label for="yoga">Yoga</label>
+                                    </div>
+
+                                    <div class="radio-inner">
+                                        <div class="radio-img"></div>
+                                        <input type="radio" name="sport-shift" id="volley" value="volley">
+                                        <img src="assets/icons/volleyball.svg" alt="">
+                                        <label for="volley">Vôlei</label>
+                                    </div>
+
+                                    <div class="radio-inner">
+                                        <div class="radio-img"></div>
+                                        <input type="radio" name="sport-shift" id="box" value="box">
+                                        <img src="assets/icons/boxing-glove-01.svg" alt="">
+                                        <label for="box">Box</label>
+                                    </div>
+                                </div>
+                            </div>
+
                         </div>
-                   </fieldset>
+                    </fieldset>
+
+                    <fieldset class="terms">
+
+                    </fieldset>
                 </form>
             </div>
         </main>
@@ -171,6 +225,7 @@
             </div>
         </aside>
     </div>
-    
+
 </body>
+
 </html>
