--- a/index.html
+++ b/index.html
@@ -206,9 +206,12 @@
                         </div>
                     </fieldset>
 
-                    <fieldset class="terms">
-
-                    </fieldset>
+                    <div class="terms-wrapper input-wrapper checkbox-wrapper">
+                        <div class="checkbox-img"></div>
+                        <input type="checkbox" name="terms" id="terms">
+                        
+                        <label for="terms">Declaro que li e concordo com os <strong>Termos e Condições</strong> e com a <strong>Política de Privacidade</strong> da escola Estrela do Amanhã. </label>
+                    </div>
                 </form>
             </div>
         </main>
